--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -17,10 +17,9 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: "18"
-                  cache: "npm"
 
             - name: Install dependencies
-              run: npm ci
+              run: npm install
 
             - name: Build OAS specifications
               run: npm run build:all
@@ -58,10 +57,9 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: "18"
-                  cache: "npm"
 
             - name: Install dependencies
-              run: npm ci
+              run: npm install
 
             - name: Build OAS specifications
               run: npm run build:all
