--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,84 +1,52 @@
-name: Generate and Deploy Documentation
+name: Deploy FormulaBlu API Documentation
 
 on:
-    push:
-        branches: [main]
-    pull_request:
-        branches: [main]
-    workflow_dispatch:
+  push:
+    branches: [ "main" ]
+  workflow_dispatch:
 
 permissions:
-    contents: read
-    pages: write
-    id-token: write
+  contents: read
+  pages: write
+  id-token: write
 
 concurrency:
-    group: "pages"
-    cancel-in-progress: false
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-    generate-docs:
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "18"
+      - name: Install dependencies
+        run: npm install
 
-            - name: Install dependencies
-              run: |
-                  echo "📦 Installing dependencies..."
-                  npm install
-                  echo "✅ Dependencies installed"
+      - name: Build documentation
+        run: npm run build:all
 
-            - name: Generate documentation
-              run: |
-                  echo "🔧 Generating OpenAPI specifications and documentation..."
-                  npm run build:all
-                  echo "✅ Documentation generation complete!"
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
 
-            - name: Upload documentation artifacts
-              uses: actions/upload-artifact@v4
-              with:
-                  name: documentation
-                  path: docs/
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./docs
 
-    deploy-docs:
-        needs: generate-docs
-        runs-on: ubuntu-latest
-        if: github.ref == 'refs/heads/main'
-
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
-            - name: Download documentation artifacts
-              uses: actions/download-artifact@v4
-              with:
-                  name: documentation
-                  path: docs/
-
-            - name: Setup Pages
-              uses: actions/configure-pages@v4
-
-            - name: Upload to Pages
-              uses: actions/upload-pages-artifact@v3
-              with:
-                  path: ./docs
-
-    deploy:
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        runs-on: ubuntu-latest
-        needs: deploy-docs
-        steps:
-            - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v3
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v3
