--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@typespec/compiler": "^0.50.0",
         "@typespec/openapi3": "^0.50.0",
         "@typespec/http": "^0.50.0",
+        "@typespec/json-schema": "^0.50.0",
         "chalk": "^4.1.2",
         "fs-extra": "^11.1.1",
         "http-server": "^14.1.1"
