--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,24 +1,15 @@
-name: Deploy FormulaBlu API Documentation
+name: Deploy Documentation
 
 on:
     push:
-        branches: ["main"]
+        branches: [main]
     workflow_dispatch:
 
 permissions:
-    contents: read
-    pages: write
-    id-token: write
-
-concurrency:
-    group: "pages"
-    cancel-in-progress: false
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+    contents: write
 
 jobs:
-    build:
+    deploy:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -33,36 +24,10 @@ jobs:
               run: npm install
 
             - name: Build documentation
-              run: |
-                  echo "🔨 Building documentation..."
-                  npm run build:all
-                  echo "✅ Documentation build completed"
+              run: npm run build:all
 
-                  # Ensure docs directory exists
-                  if [ ! -d "docs" ]; then
-                    echo "❌ Docs directory not found after build"
-                    exit 1
-                  fi
-
-                  # List generated docs
-                  echo "📋 Generated documentation files:"
-                  ls -la docs/
-
-            - name: Setup Pages
-              uses: actions/configure-pages@v4
-
-            - name: Upload artifact
-              uses: actions/upload-pages-artifact@v3
-              with:
-                  path: ./docs
-
-    deploy:
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        runs-on: ubuntu-latest
-        needs: build
-        steps:
             - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v3
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: ./docs
